--- a/style.css
+++ b/style.css
@@ -11,12 +11,5 @@ body {
   padding: 15px;
   width: 50%;
 }
-footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: palevioletred;
-  color: white;
-  text-align: center;
+#footer {
 }
